# internship-application-systems

ping/: Cargo.toml  README.md
ping/src/: main.rs  main_clap.rs
pingr/: Cargo.toml  README.md
pingr/src/: main_clap.rs
