[package]
name = "ping"
version = "0.1.0"
authors = ["13abel <therichardwei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.25.0"
regex = "1"
signal-hook = "0.1.13"
dns-lookup = "1.0.1"
clap = "2.33.0"